Starting to fix ddscat-extract.
git-svn-id: file:///mnt/svn/rtmath@1013 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -184,6 +184,8 @@ ENDIF()
 
 # The target processing
 add_definitions(-DWITH_CMAKE)
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
 # Recurse into the subdirectories
 # add_subdirectory (deps)
 #add_subdirectory (rtmath-libs/rtmath-mie)
