--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -33,6 +33,8 @@ add_subdirectory (shape-hexplate)
 #add_subdirectory (shape-rosette)
 add_subdirectory (shape-sector-snowflake)
 ##add_subdirectory (stats-ddscat-combined-plots)
+##add_subdirectory (tmatrix-convert-from-ddscat)
+add_subdirectory (tmatrix-ddscat-extract)
 add_subdirectory (tmatrix-oneellip)
 add_subdirectory (tmatrix-slice)
 #add_subdirectory (transmittance)
@@ -45,8 +47,7 @@ option ( MAKE_GUIS
 if (MAKE_GUIS)
 	##	add_subdirectory (ddscat-genparams-qt)
 	if (TMATRIX_FOUND)
-		##				add_subdirectory (tmatrix-convert-from-ddscat)
-		##				add_subdirectory (tmatrix-ddscat-extract)
+
 #		add_subdirectory (tmatrix-mie-test)
 #		add_subdirectory (mie)
 	endif()
