--- a/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
@@ -1,4 +1,4 @@
-include (common)
+#include (common)
 
 include_directories (
 	${CMAKE_BINARY_DIR}
@@ -8,8 +8,17 @@ add_executable (rtmath-tmatrix-ddscat-extract
 	main.cpp 
 	)
 
-#add_package_dependency(rtmath-tmatrix-ddscat-extract DEPENDS_ON ROOT)
+find_package(tmatrix REQUIRED)
+target_link_libraries( rtmath-tmatrix-ddscat-extract 
+	rtmath_core 
+	rtmath_mie 
+	${rtmath_core-libs}
+	${rtmath_mie-libs}
+	tmatrix-cpp
+	tmatrix-fortran
+	)
 
-addapp(rtmath-tmatrix-ddscat-extract)
-TARGET_LINK_LIBRARIES( rtmath-tmatrix-ddscat-extract tmatrix-cpp tmatrix-fortran)
+set_target_properties( rtmath-tmatrix-ddscat-extract PROPERTIES FOLDER "Apps")
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+INSTALL(TARGETS rtmath-tmatrix-ddscat-extract RUNTIME DESTINATION bin COMPONENT Applications)
 
