Small corrections to update tmatrix targets.
git-svn-id: file:///mnt/svn/rtmath@1014 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
@@ -8,7 +8,8 @@ add_executable (rtmath-tmatrix-ddscat-extract
 	main.cpp 
 	)
 
-find_package(tmatrix REQUIRED)
+find_package(tmatrixFortran REQUIRED)
+find_package(tmatrixCpp REQUIRED)
 target_link_libraries( rtmath-tmatrix-ddscat-extract 
 	rtmath_core 
 	rtmath_mie 
