Fixed the DLEXPORT tmatrix macro clash on the rtmath side. Now using DLEXPORT_RTMATH. Same change for another macro.
ddscat-extract now compiles. Fix simpler than thought (missing a serialization header).


git-svn-id: file:///mnt/svn/rtmath@1016 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -131,6 +131,7 @@ set_target_properties( rtmath_ddscat PROPERTIES FOLDER "Libs")
 find_package(tmatrixFortran REQUIRED)
 find_package(tmatrixCpp REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common io segmentation surface)
+include_directories(${TMATRIX_CPP_INCLUDE_DIRS})
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 #add_definitions(${PCL_DEFINITIONS})
