--- a/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-ddscat-extract/CMakeLists.txt
@@ -20,6 +20,6 @@ target_link_libraries( rtmath-tmatrix-ddscat-extract
 	)
 
 set_target_properties( rtmath-tmatrix-ddscat-extract PROPERTIES FOLDER "Apps")
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${TMATRIX_CPP_INCLUDE_DIRS})
 INSTALL(TARGETS rtmath-tmatrix-ddscat-extract RUNTIME DESTINATION bin COMPONENT Applications)
 
