Added support for the SVNinfo cmake macro, which defines cmake variables based on the svn command. It is much more scalable than the separate windows / linux tools, though it requires svn to be in the path (which can be corrected in the future).
All apps have rc files for windows builds.

Logger can show environment variables. It now defaults to its parent pid first. Removed the message command, as it was useless.


git-svn-id: file:///mnt/svn/ryan-debug@32 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/apps/Debug-test/CMakeLists.txt
+++ b/apps/Debug-test/CMakeLists.txt
@@ -1,4 +1,11 @@
-add_executable (Ryan_Debug-test test.cpp)
+include (SVNinfo)
+
+configure_file(test.rc.in
+	"${CMAKE_CURRENT_BINARY_DIR}/test.rc" @ONLY)
+
+add_executable (Ryan_Debug-test
+	test.cpp
+	"${CMAKE_CURRENT_BINARY_DIR}/test.rc")
 set_target_properties( Ryan_Debug-test PROPERTIES FOLDER "Apps")
 #message("liblist: ${liblist}")
 target_link_libraries(Ryan_Debug-test ${liblist} Ryan_Debug)
