--- a/debug_subversion.h.template
+++ b/debug_subversion.h.template
@@ -1,6 +1,8 @@
 #pragma once
 
-#define SUB_REV $WCREV$
-#define SUB_DATE "$WCDATE$"
+#define SUB_REV @SVNREVISION@
+#define SUB_DATE "@SVNDATE@"
 //#define SUB_WCRANGE "$WCRANGE$"
-#define SUB_SOURCE "$WCURL$"
+#define SUB_SOURCE "@SVNURL@"
+#define SUB_UUID "@SVNUUID@"
+
