Began working on tmatrix-optimize-with-ddscat. Program will use Ceres solver to minimize cost function of Qsca / Qbksc for tmatrix calculations by scaling input parameters.
git-svn-id: file:///mnt/svn/rtmath@1022 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory (shape-sector-snowflake)
 ##add_subdirectory (tmatrix-convert-from-ddscat)
 add_subdirectory (tmatrix-ddscat-extract)
 add_subdirectory (tmatrix-oneellip)
+add_subdirectory (tmatrix-optimize-with-ddscat)
 add_subdirectory (tmatrix-slice)
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
