Fix for header file install
git-svn-id: file:///mnt/svn/ryan-debug@35 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,9 +192,9 @@ INSTALL(TARGETS Ryan_Debug
 	COMPONENT Libraries
 	)
 
-INSTALL(DIRECTORY Ryan-Debug/
+INSTALL(DIRECTORY Ryan_Debug/
 #	EXPORT Ryan_DebugTargets
-	DESTINATION ${INSTALL_INCLUDE_DIR}/Ryan-Debug
+	DESTINATION ${INSTALL_INCLUDE_DIR}/Ryan_Debug
 	COMPONENT Headers
 	FILES_MATCHING PATTERN "*.h"
 	)
