Trying to shorten the main program. May add ddOutputSingle auto-compression and/or serialization routines. May add a file type detection routine for this.
git-svn-id: file:///mnt/svn/rtmath@1026 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/tmatrix-optimize-with-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-optimize-with-ddscat/CMakeLists.txt
@@ -5,6 +5,10 @@ include_directories (
 )
 
 add_executable (rtmath-tmatrix-optimize-with-ddscat
+	dataset.cpp
+	dataset.h
+	run.cpp
+	run.h
 	main.cpp 
 	)
 
