Fixed , to . typo. Also not writing _x64 or _x86 in windows dll names.
git-svn-id: file:///mnt/svn/ryan-debug@37 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/apps/Debug-test/test.rc.in
+++ b/apps/Debug-test/test.rc.in
@@ -78,7 +78,7 @@ BEGIN
             VALUE "LegalCopyright", "Copyright (C) 2013"
             VALUE "OriginalFilename", "Ryan_Debug-test.exe"
             VALUE "ProductName", "Ryan_Debug-test"
-            VALUE "ProductVersion", "@MAJOR@,@MINOR@,@REVISION@,@SVNREVISION@"
+            VALUE "ProductVersion", "@MAJOR@.@MINOR@.@REVISION@.@SVNREVISION@"
         END
     END
     BLOCK "VarFileInfo"
