--- a/apps/logger/logger.rc.in
+++ b/apps/logger/logger.rc.in
@@ -78,7 +78,7 @@ BEGIN
             VALUE "LegalCopyright", "Copyright (C) 2013"
             VALUE "OriginalFilename", "Ryan_Debug-logger.exe"
             VALUE "ProductName", "Ryan_Debug-logger"
-            VALUE "ProductVersion", "@MAJOR@,@MINOR@,@REVISION@,@SVNREVISION@"
+            VALUE "ProductVersion", "@MAJOR@.@MINOR@.@REVISION@.@SVNREVISION@"
         END
     END
     BLOCK "VarFileInfo"
