My serialization routines again have problems. I shouldn't use free functions, and should instead switch to the in-class approach.
git-svn-id: file:///mnt/svn/rtmath@1033 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -182,14 +182,18 @@ target_link_libraries(rtmath_ddscat ${rtmath_ddscat-libs})
 if (BUILD_TESTING)
 	add_executable(rtmath_core_tests ${rtmath_core_test-files})
 	add_executable(rtmath_mie_tests ${rtmath_mie_test-files})
+	add_executable(rtmath_ddscat_tests ${rtmath_ddscat_test-files})
 IF(DEFINED COMMON_CFLAGS )
 	set_target_properties(rtmath_core_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 	set_target_properties(rtmath_mie_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
+	set_target_properties(rtmath_ddscat_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 endif()
 set_target_properties( rtmath_core_tests PROPERTIES FOLDER "Tests")
 target_link_libraries(rtmath_core_tests ${rtmath_core-libs} rtmath_core)
 set_target_properties( rtmath_mie_tests PROPERTIES FOLDER "Tests")
 target_link_libraries(rtmath_mie_tests ${rtmath_mie-libs} rtmath_mie)
+set_target_properties( rtmath_ddscat_tests PROPERTIES FOLDER "Tests")
+target_link_libraries(rtmath_ddscat_tests ${rtmath_ddscat-libs} rtmath_ddscat)
 
 endif()
 #target_link_libraries(rtmath-tests 
