Finally removed the dead serialization headers. Switched to internal serialization for all but one class. Need to do g++ build test, and need to rebuild pcl for linking.
git-svn-id: file:///mnt/svn/rtmath@1036 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -22,6 +22,9 @@ if(WIN32 AND NOT CYGWIN)
 else()
 	set (sflag SHARED)
 endif()
+# Library flag - add_definitions works with targets in and below this directory
+#add_definitions("-DEXPORTING_RTMATH")
+#set (libflag "/D EXPORTING_RTMATH")
 
 # Custom prebuild step based on os
 IF(WIN32 AND NOT CYGWIN)
