paramSet now serializes correctly. Testing programs now build, but they require linking to rtmath_ddscat and currently do not run. Oddly, I had to add text serialization to here and tmatrix, because something in the ddscat lib was calling text_oarchive and iarchive on ddScattMatrix. I couldn't find the source, though.
git-svn-id: file:///mnt/svn/rtmath@1040 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -192,11 +192,12 @@ IF(DEFINED COMMON_CFLAGS )
 	set_target_properties(rtmath_ddscat_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 endif()
 set_target_properties( rtmath_core_tests PROPERTIES FOLDER "Tests")
-target_link_libraries(rtmath_core_tests ${rtmath_core-libs} rtmath_core)
+#target_link_libraries(rtmath_core_tests ${rtmath_core-libs} rtmath_core ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+target_link_libraries(rtmath_core_tests ${rtmath_ddscat-libs} rtmath_core rtmath_mie rtmath_ddscat ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 set_target_properties( rtmath_mie_tests PROPERTIES FOLDER "Tests")
-target_link_libraries(rtmath_mie_tests ${rtmath_mie-libs} rtmath_mie)
+target_link_libraries(rtmath_mie_tests ${rtmath_ddscat-libs} rtmath_core rtmath_mie rtmath_ddscat ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 set_target_properties( rtmath_ddscat_tests PROPERTIES FOLDER "Tests")
-target_link_libraries(rtmath_ddscat_tests ${rtmath_ddscat-libs} rtmath_ddscat)
+target_link_libraries(rtmath_ddscat_tests ${rtmath_ddscat-libs} rtmath_core rtmath_mie rtmath_ddscat ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
 endif()
 #target_link_libraries(rtmath-tests 
