Adding testing files (4 of the 6 for ddOutputSingle tests).
git-svn-id: file:///mnt/svn/rtmath@1043 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/data/rtmath.conf
+++ b/rtmath/rtmath/tests/data/rtmath.conf
@@ -8,3 +8,11 @@ Include testing.conf
 <ddscat>
  DefaultFile ddscat.par
 </ddscat>
+<ddOutputSingle>
+ Avg1 avg1.avg
+ Avg2 avg2.gz
+ Sca sca.sca
+ Fml fml.fml
+ Xml1 ddOutputXML.xml
+ Xml2 ddOutputXML2.bz2
+</ddOutputSingle>
