--- a/rtmath/rtmath/tests/data/rtmath.conf
+++ b/rtmath/rtmath/tests/data/rtmath.conf
@@ -10,7 +10,7 @@ Include testing.conf
 </ddscat>
 <ddOutputSingle>
  Avg1 avg1.avg
- Avg2 avg2.gz
+ Avg2 avg2.avg.gz
  Sca sca.sca
  Fml fml.fml
  Xml1 ddOutputXML.xml
