Created a shape-hash program, that hashed shapefiles based on their contents and stores them in a hash directory. Used in finding matching shapefiles from stats. The program can also generate and store stats. Both storage mechanisms use compression.
git-svn-id: file:///mnt/svn/rtmath@1047 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/data/rtmath.conf
+++ b/rtmath/rtmath/data/rtmath.conf
@@ -1,16 +1,16 @@
 #Include /etc/rtmath.conf
 <General>
- maxcores 3
+ maxcores 8
 </General>
 <atmos>
- atmosDir /data/rhoneyag/rtmath/data/profiles/,./
+ atmosDir /sat/rhoneyager/rtmath/data/profiles/,./
  profileExtensions .profile,.atm,.txt,.pro,.air
- pfSymDir /data/rhoneyag/rtmath/data/pfs,./
+ pfSymDir /sat/rhoneyager/rtmath/data/pfs,./
 </atmos>
 <lbl>
- parsumFile /data/rhoneyag/rtmath/hitran/parsum.dat
- hitranFile /data/rhoneyag/rtmath/hitran/HITRAN08.par
- molparamsFile /data/rhoneyag/rtmath/hitran/molparam.txt
+ parsumFile /sat/rhoneyager/rtmath/hitran/parsum.dat
+ hitranFile /sat/rhoneyager/rtmath/hitran/HITRAN08.par
+ molparamsFile /sat/rhoneyager/rtmath/hitran/molparam.txt
 </lbl>
 <arm>
  database arm
@@ -24,7 +24,7 @@
  models MIROC5
 </misra>
 <ddscat>
- DefaultFile /data/rhoneyag/rtmath/data/ddscat/ddscat-defaults.par
+ DefaultFile /sat/rhoneyager/rtmath/data/ddscat/ddscat-defaults.par
  <freqs>
   Set_A 10:1:130
   Set_B 130:1:250
@@ -35,5 +35,9 @@
   AMSU_A 23.8, 31.4, 50.3, 52.8, 53.596, 54.4, 54.94, 55.5, 57.290, 89.0
   AMSU_B 89.9, 150, 183.31
  </freqs>
+ <hash>
+  shapeDir /sat/rhoneyager/flakes/hashed/raw
+  statsDir /sat/rhoneyager/flakes/hashed/stats
+ </hash>
 </ddscat>
 
