Moving over to msvc for debugging of fMaxDistance. I have a new option to prevent compiling pcl stuff.
git-svn-id: file:///mnt/svn/rtmath@1064 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -9,6 +9,10 @@ include_directories(EIGEN3_INCLUDE_DIR)
 include_directories(${RYAN_DEBUG_INCLUDE_DIRS})
 include_directories(${RYAN_SERIALIZATION_INCLUDE_DIRS})
 
+option (BUILD_APPS_DEPEND_PCL
+	"Build apps that depend on PCL"
+	OFF)
+
 #add_subdirectory (absorb-slab)
 #add_subdirectory (arm-index-files)
 #add_subdirectory (atmosplot)
@@ -20,7 +24,9 @@ add_subdirectory (conv-units)
 #add_subdirectory (ddscat)
 add_subdirectory (ddscat-data)
 add_subdirectory (ddscat-ddpar)
+if (BUILD_APPS_DEPEND_PCL)
 add_subdirectory (ddscat-decimate)
+endif()
 add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
 ##add_subdirectory (ddscat-regenerate-shapes)
@@ -38,10 +44,13 @@ add_subdirectory (shape)
 ##add_subdirectory (shape-basicdata)
 #add_subdirectory (shape-combo)
 add_subdirectory (shape-hash)
+if (BUILD_APPS_DEPEND_PCL)
 add_subdirectory (shape-hexplate)
 ##add_subdirectory (shape-rectprism)
 #add_subdirectory (shape-rosette)
+
 add_subdirectory (shape-sector-snowflake)
+endif()
 ##add_subdirectory (stats-ddscat-combined-plots)
 ##add_subdirectory (tmatrix-convert-from-ddscat)
 add_subdirectory (tmatrix-ddscat-extract)
