Switched convex hull code over to VTK! It provides the functions that I need. Will create an application that exports convex hulls and an shape file polygons to remove my dependency on having ddscat in my path. I still need to validate these hulls, though. Also found some bugs in my shape stats for rms and max ellipsoids. I have to validate these. Added a validation function for volume fractions. If the value is invalid (unserializable), it replaces it with -1.0f. This should fix serialization issues.
git-svn-id: file:///mnt/svn/rtmath@1067 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -139,12 +139,12 @@ target_link_libraries(rtmath_mie ${rtmath_mie-libs})
 
 find_package(tmatrixFortran REQUIRED)
 find_package(tmatrixCpp REQUIRED)
-find_package(Qhull REQUIRED)
-include_directories(${QHULL_INCLUDE_DIRS})
-#find_package(PCL REQUIRED COMPONENTS common io segmentation surface)
-#link_directories(${PCL_LIBRARY_DIRS})
+#find_package(Qhull REQUIRED)
+#include_directories(${QHULL_INCLUDE_DIRS})
+find_package(VTK REQUIRED)
+include(${VTK_USE_FILE})
+include_directories(BEFORE ${VTK_INCLUDE_DIRS})
 include_directories(${TMATRIX_CPP_INCLUDE_DIRS})
-#include_directories(${PCL_INCLUDE_DIRS})
 add_library (rtmath_ddscat ${sflag}
 	${rtmath_ddscat-files}
 	)
@@ -157,15 +157,12 @@ SET_TARGET_PROPERTIES( rtmath_ddscat PROPERTIES RELWITHDEBINFO_POSTFIX _RelWithD
 SET_TARGET_PROPERTIES( rtmath_ddscat PROPERTIES DEBUG_POSTFIX _Debug )
 set_target_properties( rtmath_ddscat PROPERTIES FOLDER "Libs")
 
-
-#add_definitions(${PCL_DEFINITIONS})
-
-
 set (rtmath_ddscat-libs rtmath_core ${rtmath_core-libs} rtmath_mie ${rtmath_mie-libs} 
 	tmatrix-cpp tmatrix-fortran
 	${Boost_REGEX_LIBRARY}
-	${QHULL_LIBRARIES}
+	${VTK_LIBRARIES}
 	)
+	#	${QHULL_LIBRARIES}
 	#	${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} 
 	#	${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES})
 target_link_libraries(rtmath_ddscat ${rtmath_ddscat-libs})
