--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory (shape)
 ##add_subdirectory (shape-basicdata)
 #add_subdirectory (shape-combo)
 add_subdirectory (shape-hash)
+add_subdirectory (shape-hull)
 if (BUILD_APPS_DEPEND_PCL)
 add_subdirectory (shape-hexplate)
 ##add_subdirectory (shape-rectprism)
