Added vtktest for faster builds for vtk hull and voroni testing. rtmath-ddscat builds again thanks to bug fixes. hulls now switched to 'wrapper' concept. Delaunay3d takes way too long, and the vtkHull implementation only produces a cube in output. The wrapper does not properly run, however (access violations). Will eventually find a good hull replacement.
I need to make Voroni diagrams to get 'volume' for ddOutputGenerator weightings.


git-svn-id: file:///mnt/svn/rtmath@1077 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -62,6 +62,7 @@ add_subdirectory (tmatrix-optimize-with-ddscat)
 add_subdirectory (tmatrix-slice)
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
+add_subdirectory (vtktest)
 
 # Control option for creating qt apps
 option ( MAKE_GUIS
