I added the orientation-weights program. It still needs debugging for cos(theta) and degeneracy handling. The program, given sets of betas, thetas and phis from either ddscat.par files and/or from the command-line, will calculate each orientation and then construct to voronoi diagram. Based on the volume of each cell and the degeneracy of cell occurances, it constructs a weighting table for each orientation. It writes the table, along with any requested gnuplot or povray images.
This is the first app to use the Voro++ library.

I modified the rotations class to provide the rotation insertion / degeneracy handling code.


git-svn-id: file:///mnt/svn/rtmath@1078 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -38,6 +38,7 @@ add_subdirectory (getm)
 ##add_subdirectory (liu-regenerate-runs)
 add_subdirectory (mie-onesphere)
 add_subdirectory (mie-slice)
+add_subdirectory (orientation-weights)
 #add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 ##add_subdirectory (sector)
