--- a/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
+++ b/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
@@ -1,7 +1,7 @@
 include (common)
 
 add_executable (rtmath-expand-shorthand expand.cpp)
-set_target_properties( rtmath-expand-shorthand PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-expand-shorthand PROPERTIES FOLDER "Apps/Core")
 target_link_libraries(rtmath-expand-shorthand ${rtmath_core-libs} rtmath_core)
 INSTALL(TARGETS rtmath-expand-shorthand RUNTIME DESTINATION bin COMPONENT Applications)
 
