--- a/rtmath/rtmath-apps/tmatrix-optimize-with-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-optimize-with-ddscat/CMakeLists.txt
@@ -33,7 +33,7 @@ if(WIN32 AND NOT CYGWIN)
 else()
 	#	TARGET_LINK_LIBRARIES(rtmath-tmatrix-optimize-with-ddscat ${CERES_LIBRARIES_SHARED})
 endif()
-set_target_properties( rtmath-tmatrix-optimize-with-ddscat PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-tmatrix-optimize-with-ddscat PROPERTIES FOLDER "Apps/Tmatrix")
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${TMATRIX_CPP_INCLUDE_DIRS})
 #INCLUDE_DIRECTORIES(${CERES_INCLUDES})
 INSTALL(TARGETS rtmath-tmatrix-optimize-with-ddscat RUNTIME DESTINATION bin COMPONENT Applications)
