--- a/rtmath/rtmath-apps/vtktest/CMakeLists.txt
+++ b/rtmath/rtmath-apps/vtktest/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Voro REQUIRED)
 include_directories(BEFORE ${VORO_INCLUDE_DIRS})
 
 add_executable (rtmath-vtktest vtktest.cpp)
-set_target_properties( rtmath-vtktest PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-vtktest PROPERTIES FOLDER "Apps/Testing")
 target_link_libraries(rtmath-vtktest Ryan_Debug)
 #target_link_libraries(rtmath-vtktest ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 target_link_libraries(rtmath-vtktest ${VTK_LIBRARIES})
