--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory (ddscat-decimate)
 endif()
 add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
+add_subdirectory (ddscat-postprocess)
 add_subdirectory (ddscat-regenerate-run)
 ##add_subdirectory (ddscat-regenerate-shapes)
 add_subdirectory (ddscat-test)
