Several of the previous commit bugs fixed: - fml and sca files read without unknown lines - ddOutput includes the original sca file results - ddUtil and ddOutput now have program_options. ddUtil allows overriding of the detected ddscat name, and ddOutput allows the run hash directory to be set. - updated default rtmath.conf to have an entry for the ddOutput hashed run directory. - More programs updated to use the new and existing program_options. - Moved the rest of the Windows apps into the right interface subfolders.
Still need:
- P matrix calculation fixes from F
- ddOutput hashing and naming functions
 - hashed directory will have different naming semantics from the stats and shape hashes.
- ddOutput extractor program
- orientation program option to write standard ddscat weights given points
- any fixes to shape stat calculation
- shape cross-sectional area calculation (with Voronoi)
- delaunay3d output checks for valid pointer
- updateAVG completion based on ddscat weights
 - ddOutputSingle header access (not as necessary as stat table weighting)

Further out:
- pf provider for rt models
- nearest orientation search using Voronoi cells
- Voronoi-inspired interpolation and nearest-neighbor searches
- Voronoi surface selection


git-svn-id: file:///mnt/svn/rtmath@1098 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -1,7 +1,7 @@
 include (common)
 
 add_executable (rtmath-getm getm.cpp)
-set_target_properties( rtmath-getm PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-getm PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-getm ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
 
