--- a/rtmath/rtmath-apps/orientation-weights/CMakeLists.txt
+++ b/rtmath/rtmath-apps/orientation-weights/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Voro REQUIRED)
 include_directories(BEFORE ${VORO_INCLUDE_DIRS})
 
 add_executable (rtmath-orientation-weights orientation-weights.cpp)
-set_target_properties( rtmath-orientation-weights PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-orientation-weights PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-orientation-weights ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 target_link_libraries(rtmath-orientation-weights ${VORO_LIBRARIES})
 
