--- a/rtmath/rtmath/data/rtmath.conf
+++ b/rtmath/rtmath/data/rtmath.conf
@@ -38,6 +38,7 @@
  <hash>
   shapeDir /sat/rhoneyager/flakes/hashed/raw
   statsDir /sat/rhoneyager/flakes/hashed/stats
+  runsDir /sat/rhoneyager/flakes/hashed/runs
  </hash>
 </ddscat>
 
