--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory (ddscat-decimate)
 endif()
 add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
+add_subdirectory (ddscat-output)
 add_subdirectory (ddscat-postprocess)
 add_subdirectory (ddscat-regenerate-run)
 ##add_subdirectory (ddscat-regenerate-shapes)
@@ -40,6 +41,7 @@ add_subdirectory (getm)
 add_subdirectory (mie-onesphere)
 add_subdirectory (mie-slice)
 add_subdirectory (orientation-weights)
+add_subdirectory (orientation-weights-ddscat)
 #add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 ##add_subdirectory (sector)
