--- a/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 
 add_executable (rtmath-ddscat-ddpar main.cpp)
 set_target_properties( rtmath-ddscat-ddpar PROPERTIES FOLDER "Apps/Analysis")
-target_link_libraries(rtmath-ddscat-ddpar ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
+target_link_libraries(rtmath-ddscat-ddpar ${rtmath_ddscat_base-libs} rtmath_core rtmath_ddscat_base)
 INSTALL(TARGETS rtmath-ddscat-ddpar RUNTIME DESTINATION bin COMPONENT Applications)
 
 
