--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -2,7 +2,7 @@ include (common)
 
 add_executable (rtmath-getm getm.cpp)
 set_target_properties( rtmath-getm PROPERTIES FOLDER "Apps/Analysis")
-target_link_libraries(rtmath-getm ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
+target_link_libraries(rtmath-getm ${rtmath_ddscat_base-libs} rtmath_core rtmath_ddscat_base)
 INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
 
 
