Disabled precompiled headers on gcc, as the cmake script is clearly insufficient. Performed first build with new linkage visibility on gcc. Made small corrections. Switched precompiled headers from using #pragma once, as gcc complained, and there was no way to suppress it. ddscat-test has a small patch, as ddOutputSingleObj operator<<(ostream, ...) needs to have the definition fixed to match.
Should now build successfully.



git-svn-id: file:///mnt/svn/rtmath@1106 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -173,12 +173,12 @@ IF(MSVC)
 	else()
 		SET(COMMON_CFLAGS ${COMMON_CFLAGS} /MP)
 	endif()
-	add_definitions(-DCONF="$(Configuration)")
+	#add_definitions(-DCONF="$(Configuration)")
 else()
 	if (NOT CMAKE_BUILD_TYPE)
-		add_definitions(-DCONF="Release")
+		#		add_definitions(-DCONF="Release")
 	else()
-		add_definitions(-DCONF="${CMAKE_BUILD_TYPE}")
+		#		add_definitions(-DCONF="${CMAKE_BUILD_TYPE}")
 	endif()
 ENDIF()
 
