--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -241,7 +241,7 @@ INSTALL(TARGETS rtmath-tests
 	)
 ENDIF()
 
-INSTALL(TARGETS rtmath_core rtmath_ddscat rtmath_ddscat_core rtmath_voronoi rtmath_mie
+INSTALL(TARGETS rtmath_core rtmath_ddscat rtmath_ddscat_base rtmath_voronoi rtmath_mie
 	RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 	LIBRARY DESTINATION ${INSTALL_LIB_DIR}
 	ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
