--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
 add_subdirectory (ddscat-output)
+add_subdirectory (ddscat-output-extract)
 add_subdirectory (ddscat-postprocess)
 add_subdirectory (ddscat-regenerate-run)
 ##add_subdirectory (ddscat-regenerate-shapes)
