--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -42,6 +42,7 @@ add_subdirectory (getm)
 add_subdirectory (mie-onesphere)
 add_subdirectory (mie-slice)
 add_subdirectory (orientation-weights)
+add_subdirectory (orientation-weights-1d)
 add_subdirectory (orientation-weights-ddscat)
 #add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
